# lang

./: .dockerignore  Dockerfile.dev  Makefile  README.md  agents.py  alembic.ini  database.py  docker-compose.yaml  env_template  main.py  models.py  pyproject.toml  settings.py  utils.py
alembic/: env.py
alembic/versions/: 2ef0cd024bd9_.py  2fb3241400cb_.py  3f22f79fc2d1_.py  46bece7624df_.py  a6f79ee005bc_.py
app/: main.py
app/helpers/: agents.py  database.py
app/routers/products/: models.py  products.py  schema.py
